# rtsync

./: .gitignore  Cargo.toml  LICENSE.txt  README.md
autocomplete/: rtsynctl.bash  rtsynctl.zsh
crates/core/: cli.rs  lib.rs  main.rs
crates/core/cmd/rtsync/: build.rs  cli.rs  rtsync.rs
crates/core/cmd/rtsynctl/: build.rs  cli.rs  rtsynctl.rs
crates/internal/: Cargo.toml
crates/internal/src/: lib.rs  logger.rs  msg.rs  status.rs  status_web.rs  util.rs  version.rs
crates/manager/: Cargo.toml
crates/manager/src/: config.rs  db.rs  db_leveldb.rs  db_redis.rs  db_rocksdb.rs  lib.rs  middleware.rs  server.rs  server_test.rs
crates/worker/: Cargo.toml
crates/worker/src/: base_provider.rs  btrfs_snapshot_hook.rs  btrfs_snapshot_hook_nolinux.rs  cgroup.rs  cgroup_test.rs  cmd_provider.rs  common.rs  config.rs  config_diff.rs  config_test.rs  context.rs  docker.rs  docker_test.rs  exec_post_hook.rs  exec_post_test.rs  hooks.rs  job.rs  job_test.rs  lib.rs  loglimit_hook.rs  loglimit_test.rs  provider.rs  provider_test.rs  rsync_provider.rs  runner.rs  schedule.rs  two_stage_rsync_provider.rs  worker.rs  worker_test.rs  zfs_hook.rs  zfs_hook_test.rs
tests/: http_client.rs  manager.conf  manager_main.rs  manager_real.conf  worker.conf  worker2.conf  worker_main.rs  worker_real.conf
tests/mirrors/: aosp.conf  deb_fedora.conf
