[package]
name = "rtsync"
authors = ["xiaooyh <xiaooyh@qq.com>"]
description = ""
exclude = [

]

edition = "2021"
rust-version = "1.82.0"

[[bin]]
bench = false
name = "rtsync"
path = "crates/core/main.rs"

[workspace]
members = [
    "crates/internal", 
    "crates/manager", 
    "crates/worker", 
    
    
    
    "tests/http_test",
]

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
log = "0.4.22"
env_logger = "0.11.5"
tokio = { version = "1.41.1", features = ["full"]}





internal = {path = "./crates/internal"}



