[package]
name = "internal"
version = "0.1.0"
edition = "2021"

[lib]
name = "internal"
bench = false

[dependencies]
log = "0.4.22"
fern = { version = "0.7.0", features = ["colored"] }
chrono = { version = "0.4.38", features = ["serde"]}
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
once_cell = "1.20.2"
rustls = "0.23.16"
tokio = {version = "1.41.1", features = ["full"]}
reqwest = { version = "0.12.9", features = ["rustls-tls", "json"] }
regex = "1.11.1"
webpki-roots = "0.26.6"
tempfile = "3.14.0"
rustls-pemfile = "2.2.0"
lazy_static = "1.5.0"
rocket = "0.5.1"