[package]
name = "manager"
version = "0.1.0"
edition = "2021"

[lib]
name = "manager"
bench = false

[dependencies]
serde = { version = "1.0.210", features = ["derive"] }
toml = "0.8.19"
clap = { version = "4.5.20", features = ["derive"] }
tempfile = "3.13.0"
internal = {path = "../internal"}
serde_json = "1.0.132"
chrono = "0.4.38"
tokio = {version = "1.41.1", features = ["full"]}
#leveldb = "0.8.6"  # 做的时候没看懂这个怎么用，换了rusty-leveldb
rusty-leveldb = "3.0.2"
redis = { version = "0.27.5", features = ["aio", "tokio-comp"] }
async-trait = "0.1.83"
rocksdb = "0.22.0"
rocket = { version = "0.5.1", features = ["json", "tls"] }
reqwest = "0.12.9"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
log = "0.4.22"
anyhow = "1.0.95"
rand = "0.8.5"