[package]
name = "worker"
version = "0.1.0"
edition = "2021"


[lib]
name = "worker"
bench = false

[dependencies]
thiserror = "1.0.65"
toml = "0.8.19"
serde = { version = "1.0.211", features = ["derive"] }
glob = "0.3.1"
merge = "0.1.0"
tempfile = "3.13.0"
users = "0.11.0"
chrono = "0.4.38"
regex = "1.11.1"
log = "0.4.22"
libc = "0.2.161"
sysinfo = "0.32.0"
#cgroups-rs = "0.3.4"
skiplist = "0.5.1"
tera = "1.20.0"
shlex = "1.3.0"
internal = {path = "../internal"}

nix = { version = "0.29.0", features = ["process", "signal"] }